Day3/3.capstone/app/kustomize/overlays/test/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          env:
            - name: CAPSTONE
              value: "TEST"
            - name: DB_HOST
              value: mysql-test.db.svc.cluster.local
