Day3/3.capstone/app/kustomize/overlays/test/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-route
  labels:
    app: node-app
spec:
  to:
    name: node-service
